# noam

./: .clang-format  .gitignore  .gitmodules  .hdoc.toml  CMakeLists.txt  CMakePresets.json  bench.sh  build.sh  helper.cmake  readme.md
.github/workflows/: build-and-test.yaml
bench/: bench.cpp  parse_sequence.cpp
bench/data/: 46da5845e403.csv  528065d48a15.csv  c8eaebcd8565.csv
include/: parser.hpp
include/noam/: co_await.hpp  co_parse.hpp  co_result.hpp  combinators.hpp  concepts.hpp  intrinsics.hpp  operators.hpp  parser.hpp  result_types.hpp  state.hpp  type_traits.hpp
include/noam/coupling/: await_parser.hpp  parse_promise.hpp
include/noam/util/: combinator_types.hpp  fmt.hpp  helpers.hpp  intrinsic_types.hpp  literal.hpp  overload_set.hpp  parsef.hpp  reflection.hpp  then_operator.hpp  value_wrappers.hpp
src/: hello.cpp  json-example.cpp
src/include/: json_value.hpp
test/: combinators.cpp  intrinsics.cpp  test_helpers.hpp
